Fix out of bounds loader

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -6,8 +6,8 @@
   font-size: 32px;
   line-height: 32px;
   position: fixed;
-  top: 0;
-  right: 0;
+  top: 12px;
+  right: 12px;
   transition-duration: 0.3s;
   pointer-events: none;
   opacity: 0.5;
